--- a/resources/css/sidebar.css
+++ b/resources/css/sidebar.css
@@ -1,8 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500'); */
 
-body {
-  font-family: 'Poppins', sans-serif;
-}
+/* body {
+  overflow-x: hidden;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+} */
+
+/* Toggle Styles */
 
 #viewport {
   padding-left: 250px;
@@ -18,7 +22,7 @@ body {
   margin-right: 0;
 }
 
-* Sidebar Styles */
+/* Sidebar Styles */
 
 #sidebar {
   z-index: 1000;
