Penambahan : All page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,11 @@
     background: #526EFF;
 }
 
+.kotak {
+    background: whitesmoke;
+    border-radius: 10px;
+}
+
 table {
     background: whitesmoke;
     border-color: red;
